ODF conformance - Impress table markup fixes

Fix for fdo#35190 - Impress writes invalid ODF for the table
styles (text:style-name instead of table:style-name).